ELS Code/main/default/objects/Unit__c/fields/Is_Rental__c.field-meta.xml
<CustomField>
    <fullName>Is_Rental__c</fullName>
    <label>Is Rental?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>