ELS Code/main/default/objects/Unit__c/fields/Site_ID__c.field-meta.xml
<CustomField>
    <fullName>Site_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site ID</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Units</relationshipLabel>
    <relationshipName>Units</relationshipName>
    <type>Lookup</type>
</CustomField>