ELS Code/main/default/objects/Unit__c/fields/Unit_ID__c.field-meta.xml
<CustomField>
    <fullName>Unit_ID__c</fullName>
    <externalId>true</externalId>
    <label>Unit ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>